# bucica-api

./: .babelrc.json  .env.example  .env.test  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  account.json  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  test.db  tsconfig.json  vite.config.ts
.github/workflows/: build(production).yml  build(staging).yml  build.yml  cd(production).yml  cd(staging).yml  cd.yml  lint.yml  pipeline.yml  pipelines.yml  pr-lint.yml  tests.yml
alembic/: env.py
alembic/versions/: 0c3b7d8a51ab_change_criado_em_to_date.py  0fa6e7b2f5e8_initial_database_schema.py  1bc8eeaf063c_change_criado_em_to_date.py  2d6b10cfcb5d_first_table_model.py  6d3a43bff9b1_adiciona_column_fist_half_bool.py  762874570ad0_donors_table.py  788a306aab4d_remove_data_nascimento_column.py  856757bd0ae7_add_mock_data.py  c30f103092b2_change_columns_name.py  c8eb18140bb0_change_enum_latetypes.py
docker/nginx/: Dockerfile  docker-compose.yml  nginx.conf
docker/production/: Dockerfile  docker-compose.yml
docker/staging/: Dockerfile  docker-compose.yml
nginx/: Dockerfile  nginx.conf
nginx/ssl/: certificate.pem  key.pem
prisma/: schema.prisma  seed.js  seed.ts
prisma/migrations/20220906182801_setup_migration/: migration.sql
prisma/migrations/20220914230807_/: migration.sql
src/: app.ts  main.py  seed.py  server.ts
src/controllers/: index.ts
src/controllers/presenca-controller/: index.ts
src/database/: session.py  sheet.py
src/errors/: auth_exception.py  base_exception.py  students_exception.py
src/middlewares/: index.ts
src/middlewares/errorHandler-middleware/: index.ts
src/models/: donor_model.py  studants.py  studants_models.py  students_model.py
src/repositories/: attendance_repository.py  base_repository.py  donor_repository.py  index.ts  studants_repository.py  students_repository.py
src/repositories/presenca-repository/: index.ts
src/routers/: auth_router.py  check_attandance.py  donor_router.py  index.ts  presenca_router.py  students_router.py
src/routers/presenca-router/: index.ts
src/schemas/: attendence_schemas.py  donor_schema.py  studansts.py  studants.py
src/scripts/: register_attendance_first_half.py  register_attendance_second_half.py  update_attendance_loop.py
src/services/: base_services.py  index.ts  studants.py  studants_services.py  students_service.py
src/services/presenca-service/: index.ts  utils.ts
src/utils/: app_exceptions.py  base_schemas.py  calendar.py  date_handler.py  get_exceptions_to_front_end.py  index.ts  schedule.py  service_results.py  session.py
src/utils/errorFactory/: index.ts
tests/: conftest.py
tests/integration/: index.test.ts
tests/integration_tests/donors/: test_donors.py
tests/integration_tests/presenca/: test_cpf_number.py
tests/integration_tests/presenca/:cpf_number/: test.py
tests/integration_tests/scripts/: test_scripts.py
tests/presenca-route/: factories.ts  index.test.js  index.test.ts
tests/unit/: index.test.ts
tests/unit_tests/database/: test_sheet.py
tests/unit_tests/services/: test_studants_services.py
tests/unit_tests/utils/: test_date_handler.py  test_schedule.py
