[tool.poetry]
name = "bucica-api"
version = "0.1.0"
description = ""
authors = ["Einstein Floripa <vale@einsteinfloripa.com.br>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.7"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
ipdb = "^0.13.13"
pytest-fastapi-deps = "^0.2.3"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
faker = "^17.6.0"
pylint = "^2.17.1"
black = "^23.3.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pre-commit = "^3.2.1"
httpx = "^0.23.3"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"
mock = "^5.0.1"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | alembic
  )/
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = ".env.test"
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
  "unit: marks tests as unit (deselect with '-m \"not unit\"')",
]
